Bug 1532291, bail out early when trying to find any focusable element in shadow tree, r=masayuki

If aIgnoreTabIndex is true, we're just trying to find any focusable element, doesn't matter which tabindex it has.
So better to bail out early from the deeply nested GetNextTabbableContentInScope to avoid exponential number of calls.

Differential Revision: https://phabricator.services.mozilla.com/D23312